# Denethor

./: .dockerignore  .env.example  .env.example.backup  .gitignore  AWS_LAMBDA_GUIDE.md  DEMO-GUIDE.md  DEMO-README.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  Dockerfile.lambda  Makefile  PHASE2_IMPLEMENTATION_REPORT.md  QA-TESTS-STRUCTURE.md  QUICKSTART.md  README.md  START_HERE.md  biome.config.test.ts  biome.json  cleanup-sessions.ts  demo-test.ts  docker-compose.yml  lambda-test-payload.json  package.json  package.test.ts  quick-test.ts  throttled-test.ts  tsconfig.json  vitest.config.test.ts  vitest.config.ts
.github/workflows/: ci.yml
bmad/_cfg/: files-manifest.csv  manifest.yaml
docs/: architecture.md  bmm-workflow-status.yaml  epic-7-summary.md  epics.md  implementation-readiness-report-2025-11-03.md  improvement-plan-game-progression.md  phase-5-gameplay-dynamics.md  sprint-status.yaml  troubleshooting.md
examples/: advanced-usage.ts  basic-usage.ts  cli-usage.sh  lambda-event.json
python/: Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  resources
python/scripts/: launch_ec2_training.sh
python/src/denethor_rl/: __init__.py
python/src/denethor_rl/envs/: __init__.py  base_browser_env.py  game_env.py
python/src/denethor_rl/games/: __init__.py  registry.py
python/src/denethor_rl/policies/: __init__.py  cnn_policy.py
python/src/denethor_rl/training/: __init__.py  evaluate.py  puffer_env.py  train.py
python/tests/: __init__.py  test_envs.py  test_rewards.py  test_state_detector.py
src/api/: index.ts  (+1 more)
tests/: README.md
(+113 files in other folders)
